@@ -1,5 +1,10 @@
 2005-05-29  Jacob Smullyan  <smulloni@smullyan.org>
 
+	* src/PyDO2/fetch.py: first cut at sql template
+	method.
+
+2005-05-29  Jacob Smullyan  <smulloni@smullyan.org>
+
 	* src/PyDO2/drivers/{psycopgconn,sqliteconn,mssqlconn}.py, 
 	src/PyDO2/{base,dbi}.py: change all str tests to basestring.
 
